--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ PORT=3000
 NODE_ENV=development
 LOG_LEVEL=info
 
-#Database Configuration
+# Database Configuration
 DATABASE_URL=postgresql://neondb_owner:npg_N9ztGCX5qAdH@ep-muddy-moon-afw9sdmu-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# Arcjet
+ARCJET_KEY=ajkey_01k5m2cdhqedrbjyzwsf9w0m5k
