--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   # Neon Local proxy for development
@@ -6,7 +6,7 @@ services:
     image: neondatabase/neon_local:latest
     container_name: neon-local
     ports:
-      - "5432:5432"
+      - '5432:5432'
     env_file:
       - .env.development
     volumes:
@@ -14,7 +14,7 @@ services:
       - ./.neon_local/:/tmp/.neon_local
       - ./.git/HEAD:/tmp/.git/HEAD:ro,consistent
     healthcheck:
-      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "neon"]
+      test: ['CMD', 'pg_isready', '-h', 'localhost', '-p', '5432', '-U', 'neon']
       interval: 5s
       timeout: 3s
       retries: 5
@@ -30,11 +30,11 @@ services:
       target: development
     container_name: acquisitions-app-dev
     ports:
-      - "${PORT:-3000}:3000"
+      - '${PORT:-3000}:3000'
     env_file:
       - .env.development
     environment:
-      NEON_LOCAL: "true"
+      NEON_LOCAL: 'true'
       DATABASE_URL: ${DATABASE_URL:-postgres://user:password@neon-local:5432/postgres}
     volumes:
       # Mount source code for development hot-reload
